@@ -4,10 +4,10 @@ export const config = {
 	fetcherConcurrency: parseInt(process.env.FETCHER_CONCURRENCY || "10", 10),
 	crawlDelayMs: parseInt(process.env.CRAWL_DELAY_MS || "2000", 10),
 	maxDepth: parseInt(process.env.MAX_DEPTH || "5", 10),
+	domainFilter:
+		process.env.DOMAIN_FILTER === "true" || process.env.DOMAIN_FILTER === "1",
 	userAgent:
 		process.env.USER_AGENT || "MyCrawler/2.0 (+http://example.com/bot)",
 	useRenderer:
-		process.env.USE_RENDERER === "true" ||
-		process.env.USE_RENDERER === "1" ||
-		true,
+		process.env.USE_RENDERER === "true" || process.env.USE_RENDERER === "1",
 };
